# incitape

./: .dockerignore  .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md  SECURITY_REVIEW.md  deny.toml
.github/workflows/: ci.yml
crates/incitape-analyzer/: Cargo.toml
crates/incitape-analyzer/src/: analyze.rs  lib.rs  model.rs
crates/incitape-cli/: Cargo.toml
crates/incitape-cli/src/: analyze.rs  eval.rs  main.rs  minimize.rs  report.rs  validate.rs
crates/incitape-cli/tests/: analyze_smoke.rs  cli_help.rs  eval_smoke.rs  minimize_smoke.rs  record_security.rs  record_smoke.rs  report_smoke.rs
crates/incitape-core/: Cargo.toml
crates/incitape-core/src/: config.rs  error.rs  json.rs  lib.rs
crates/incitape-eval/: Cargo.toml
crates/incitape-eval/src/: baselines.rs  generator.rs  lib.rs  model.rs  runner.rs  suite.rs
crates/incitape-minimize/: Cargo.toml
crates/incitape-minimize/src/: lib.rs  minimize.rs  policy.rs
crates/incitape-minimize/tests/: equivalence.rs
crates/incitape-recorder/: Cargo.toml
crates/incitape-recorder/src/: auth.rs  grpc.rs  http.rs  ingest.rs  lib.rs  record.rs  tls.rs
crates/incitape-redaction/: Cargo.toml
crates/incitape-redaction/src/: lib.rs  otlp.rs  redaction.rs
crates/incitape-replay/: Cargo.toml
crates/incitape-replay/src/: client.rs  filter.rs  lib.rs  replay.rs  sink.rs  speed.rs
crates/incitape-report/: Cargo.toml
crates/incitape-report/schema/: ai_report.schema.json
crates/incitape-report/src/: ai.rs  lib.rs  report.rs
crates/incitape-tape/: Cargo.toml
crates/incitape-tape/src/: bounds.rs  checksums.rs  finalize.rs  format.rs  lib.rs  manifest.rs  reader.rs  record.rs  tape_id.rs  writer.rs
crates/incitape-tape/tests/: checksums.rs  tape_reader.rs  tape_writer.rs
demo/: docker-compose.yml  run_demo.sh
demo/collector/: collector.yaml
demo/recorder/: Dockerfile  incitape.yaml
demo/services/checkout/: app.py
demo/services/frontend/: app.py  requirements.txt
demo/services/payments/: Dockerfile  app.py
docs/: architecture.md
eval/fixtures/perf_medium/tape/: analysis.json  checksums.sha256  manifest.yaml  tape.tape.zst
eval/suites/: perf-medium.yaml  secret-injection.yaml  synthetic-smoke.yaml
perf/: perf_baseline.json
scripts/: perf_analyze.sh
tools/boundary-check/: Cargo.toml
tools/boundary-check/src/: main.rs
