[package]
name = "incitape-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
incitape-core = { path = "../incitape-core" }
incitape-tape = { path = "../incitape-tape" }
incitape-analyzer = { path = "../incitape-analyzer" }
incitape-redaction = { path = "../incitape-redaction" }
opentelemetry-proto = { version = "0.31", default-features = false, features = ["trace", "gen-tonic"] }
prost = "0.14"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
