[package]
name = "incitape-minimize"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex = "0.4"
incitape-core = { path = "../incitape-core" }
incitape-tape = { path = "../incitape-tape" }
incitape-analyzer = { path = "../incitape-analyzer" }
opentelemetry-proto = { version = "0.31", default-features = false, features = ["trace", "gen-tonic"] }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
