[package]
name = "incitape-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = "1"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp", "runtime"] }
incitape-core = { path = "../incitape-core" }
incitape-redaction = { path = "../incitape-redaction" }
incitape-tape = { path = "../incitape-tape" }
opentelemetry-proto = { version = "0.31", default-features = false, features = ["trace", "metrics", "logs", "gen-tonic"] }
prost = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
tonic = { version = "0.14", features = ["tls-ring"] }

[dev-dependencies]
tempfile = "3"
