[package]
name = "incitape-report"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
incitape-core = { path = "../incitape-core" }
incitape-analyzer = { path = "../incitape-analyzer" }
jsonschema = "0.17"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
