[package]
name = "incitape-tape"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
byteorder = "1"
hex = "0.4"
incitape-core = { path = "../incitape-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
